--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,6 @@
 body {
     max-width: 100vw;
     min-height: 100vh;
-    padding: 0;
     margin: 0;
     padding: 10px;
     color: rgb(255, 255, 255);
@@ -78,10 +77,17 @@ body {
     overflow-y: auto;
     max-height: calc(100vh - 260px);
 }
-.one_coin_container {
+.one_coin_container,
+.header_container {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 }
 .coin_description {
     display: flex;
+}
+
+.coin-logo-img {
+    width: 25px;
+    height: 25px;
 }
