feat: add footer

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,7 +92,8 @@ body {
 .one_coin_container,
 .header_container,
 .panel-block,
-.pagination-block {
+.pagination-block,
+.footer-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -111,4 +112,9 @@ body {
 #coin-id,
 #total-volume-header {
     cursor: pointer;
+}
+
+.footer-git-container {
+    display: flex;
+    flex-direction: column;
 }
