--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
     max-width: 100vw;
     min-height: 100vh;
@@ -11,6 +10,7 @@ body {
     justify-content: space-between;
 }
 
+/* header ========================================*/
 .header {
     display: flex;
     flex-direction: row;
@@ -19,6 +19,59 @@ body {
     margin-bottom: 30px;
 }
 
+.logoname_container {
+    display: flex;
+    justify-content: flex-start;
+    flex-grow: 2;
+}
+
+.control_header {
+    display: flex;
+    justify-content: flex-end;
+    flex-grow: 3;
+    column-gap: 60px;
+}
+
+.logo_header {
+    background-color: blue;
+    width: 30px;
+    height: 30px;
+}
+
+.lang_container,
+.currency_header {
+    cursor: pointer;
+}
+
+.ul_lang {
+    width: 60px;
+}
+
+.ul_currency {
+    width: 80px;
+}
+
+.lang_li,
+.currency_li {
+    cursor: pointer;
+}
+
+.lang_li:hover,
+.currency_li:hover {
+    color: red;
+}
+
+.name_header {
+    margin: 0px;
+}
+
+.darkmode_container {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+/* header ========================================*/
 .main {
     width: 100%;
     display: flex;
@@ -54,7 +107,7 @@ body {
     grid-template-columns: 1.5fr 0.5fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: 'list list gr'
-    'list list news';
+        'list list news';
 }
 
 .newsmain_container {
