--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -165,6 +165,10 @@ body {
     justify-content: space-between;
 }
 
+.one_coin_container {
+    cursor: pointer;
+}
+
 .coin_description {
     display: flex;
 }
@@ -178,6 +182,17 @@ body {
 #coin-id,
 #total-volume-header {
     cursor: pointer;
+}
+
+.coin_image {
+    width: 25px;
+    height: 25px;
+}
+
+.single_coin_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .footer-git-container {
