--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,7 +69,7 @@ body {
 }
 
 .name_header {
-    margin: 0px;
+    margin: 0;
 }
 
 .darkmode_container {
@@ -78,10 +78,126 @@ body {
     cursor: pointer;
 }
 
+.login_button {
+    min-width: 300px;
+    text-align: center;
+}
+
+.login_button:hover {
+    color: blue;
+}
+
 /* popup start ======================================== */
 .popup_view {
     position: absolute;
     background-color: black;
+    z-index: 99;
+}
+
+.login_container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    height: 50px;
+}
+
+.auth_sign_in {
+    color: orangered;
+    cursor: pointer;
+}
+
+.auth_login {
+    height: 50px;
+    color: darkgreen;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login_avatar {
+    max-height: 50px;
+}
+
+.auth_container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.signin_container {
+    height: 260px;
+}
+
+.signup_container {
+    height: 360px;
+}
+
+.change_user_data_container {
+    height: 240px;
+}
+
+.auth_container input {
+    text-align: center;
+}
+
+.auth_button {
+    cursor: pointer;
+    width: 60%;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: azure;
+}
+
+.auth_button {
+    color: green;
+}
+
+.match {
+    background-color: rgba(180, 255, 180, 0.9);
+}
+
+.no_match {
+    background-color: rgba(255, 180, 180, 0.9);
+}
+
+.auth_button_disable {
+    color: red;
+    background-color: gray;
+}
+
+.auth_button_save {
+    width: 40%;
+}
+
+.signin_link {
+    cursor: pointer;
+    color: white;
+}
+
+.signin_link:hover {
+    color: blue;
+}
+
+.avatar_container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.avatar_image {
+    cursor: pointer;
+    width: 50px;
+    border: 2px solid;
+    border-color: rgba(127, 255, 127, 0.0);
+}
+
+.avatar_image_select {
+    border-color: rgba(127, 255, 127, 0.99);
 }
 
 /* main ========================================*/
@@ -139,8 +255,9 @@ body {
 }
 
 .chart_container {
-    background-color: darkmagenta;
+    background-color: #d2d0d2;
     flex-grow: 999;
+    color: #2a2929;
 }
 
 .chart_main_container {
@@ -165,6 +282,10 @@ body {
     justify-content: space-between;
 }
 
+.one_coin_container {
+    cursor: pointer;
+}
+
 .coin_description {
     display: flex;
 }
@@ -178,6 +299,17 @@ body {
 #coin-id,
 #total-volume-header {
     cursor: pointer;
+}
+
+.coin_image {
+    width: 25px;
+    height: 25px;
+}
+
+.single_coin_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .footer-git-container {
