--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,6 +77,7 @@ body {
     height: 40px;
     cursor: pointer;
 }
+
 .login_button {
     min-width: 300px;
     text-align: center;
@@ -326,6 +327,35 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+}
+
+button {
+    transition: all .5s ease;
+    color: #fff;
+    border: 1px solid white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1;
+    font-size: 17px;
+    background-color: transparent;
+    padding: 10px;
+    outline: none;
+    border-radius: 4px;
+}
+
+button:hover {
+    color: #001F3F;
+    background-color: rgba(0, 71, 74, 0.638);
+}
+
+.tab_button {
+    width: 200px;
+    height: 80px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    background-color: rgb(241, 233, 228);
+    color: rgb(110, 110, 110)
 }
 
 .footer-git-container {
