--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,8 +45,8 @@ body {
 }
 
 .logo_header {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
 }
 
 .lang_container,
@@ -223,7 +223,8 @@ h1 {
 
 /* watchlist ===================================*/
 .watchlist_container {
-    background-color: darksalmon;
+    color: rgb(51, 51, 51);
+    background-color: rgb(251, 249, 246);
     flex-grow: 999;
 }
 
@@ -234,13 +235,8 @@ h1 {
 
 /* portfolio ===================================*/
 .portfolio_container {
-    background-color: silver;
-    flex-grow: 999;
-}
-
-/* portfolio ===================================*/
-.portfolio_container {
-    background-color: silver;
+    color: rgb(51, 51, 51);
+    background-color: rgb(251, 249, 246);
     flex-grow: 999;
 }
 
