--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -100,7 +100,7 @@ h1 {
     background-color: transparent;
     padding: 10px;
     outline: none;
-    border-radius: 4px;
+    border-radius: 15px;
 }
 
 .login_button:hover {
@@ -111,8 +111,11 @@ h1 {
 /* popup start ======================================== */
 .popup_view {
     position: absolute;
-    background-color: black;
+    background-color: rgb(241, 233, 228);
+    color: rgb(181, 153, 136);
     z-index: 99;
+    padding: 20px;
+    border-radius: 15px;
 }
 
 .login_container {
@@ -147,6 +150,7 @@ h1 {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border-radius: 15px;
 }
 
 .signin_container {
@@ -173,10 +177,12 @@ h1 {
     justify-content: center;
     align-items: center;
     background-color: azure;
+    border-radius: 15px;
 }
 
 .auth_button {
     color: green;
+    border-radius: 15px;
 }
 
 .match {
@@ -194,6 +200,25 @@ h1 {
 
 .auth_button_save {
     width: 40%;
+    transition: all .5s ease;
+    /*color: rgb(51, 51, 51);*/
+    border: 1px solid white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1;
+    font-size: 17px;
+    /*background-color: transparent;*/
+    background-color: rgb(241, 233, 228);
+    color: rgb(181, 153, 136);
+    padding: 10px;
+    outline: none;
+    border-radius: 15px;
+}
+
+.auth_button_save:hover {
+    color: rgb(255, 139, 52);
+    background-color: rgb(255, 255, 255);
 }
 
 .signin_link {
