feat: add styles to main page

--- a/src/css/runningLine.css
+++ b/src/css/runningLine.css
@@ -1,11 +1,12 @@
-
 .trend-coin {
+    width: 400px;
+    height: 80px;
     display: flex;
     flex-direction: row;
     gap: 10px;
     align-items: center;
     justify-content: center;
-    border: 1px solid gray;
+   /* border: 1px solid rgba(180, 156, 141, .5);*/
     padding: 5px;
 }
 
@@ -19,12 +20,11 @@
 
 .running-line {
     width: 1200px;
-    height: 75px;
-    margin: 0 auto;
+    height: 80px;
     white-space: nowrap;
     overflow: hidden;
     box-sizing: border-box;
-    margin-top: 10px;
+    margin: 10px auto 0;
 }
 
 .marquee-line {
