--- a/src/css/coinList.css
+++ b/src/css/coinList.css
@@ -1,8 +1,9 @@
 .coins_list_container {
-    padding: 5px;
-    background-color: dodgerblue;
+    background-color: rgb(241, 233, 228);
     grid-area: list;
     overflow-y: auto;
+    border : 1px solid rgba(180, 156, 141, .5);
+    border-radius:  0 0 15px 15px;
 }
 
 .panel-block {
@@ -10,7 +11,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin: 10px;
 }
 
 .pagination-block {
@@ -19,27 +21,108 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    gap: 10px;
+    gap: 20px;
 }
 
 .pagination-btn-prev,
 .pagination-btn-next {
-    height: 40px;
+    border: 1px solid rgba(180, 156, 141, .5);
     width: 40px;
-}
-
-.current-page {
-
-}
-
-.header_container {
-    height: 40px;
+    padding: 10px;
     text-align: center;
+    cursor: pointer;
+}
+
+button#coins-next:hover,
+button#coins-prev:hover {
+    background-color: rgb(241, 233, 228);
 }
 
 .coins-count {
-    height: 40px;
-    width: 60px;
+    width: 70px;
+    padding: 10px;
+    border: 1px solid rgba(180, 156, 141, .5);
+    border-radius: 5px;
+}
+
+.coins_list_container .header_container {
+    height: 50px;
+    padding: 2px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.coin-number-header,
+.coin-name-header,
+.coin-price-header,
+.coin-change-price-header,
+.coin-market-cup-header,
+.coin-change-market-cup-header,
+.coin-total-volume-header,
+.coin-circulating-supply-header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+}
+
+.coin-number-header,
+.market_cap_rank {
+    width: 3%;
+    margin-left: 10px;
+}
+
+.coin-watchlist-header,
+.coin_list_watch {
+    width: 3%;
+}
+.coin-name-header,
+.coin-list_header {
+    width: 20%;
+}
+
+.coin-price-header,
+.coin-list_current-price {
+    width: 11%;
+}
+.coin-change-price-header,
+.coin-list_percentage {
+    width: 10%;
+}
+.coin-market-cup-header,
+.coin-list_market-cup {
+    width: 12%;
+}
+.coin-change-market-cup-header,
+.coin-list_percentage24h {
+    width: 12%;
+}
+.coin-total-volume-header,
+.coin-list_volume {
+    width: 12%;
+}
+.coin-circulating-supply-header,
+.coin-list_supply {
+    width: 16%;
+}
+
+
+.one_coin_container {
+    display: flex;
+    flex-direction: row;
+}
+
+.coin-list_header {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.coin_list_watch {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 
