--- a/src/css/coinList.css
+++ b/src/css/coinList.css
@@ -2,8 +2,8 @@
     background-color: rgb(241, 233, 228);
     grid-area: list;
     overflow-y: auto;
-    border : 1px solid rgba(180, 156, 141, .5);
-    border-radius:  0 0 15px 15px;
+    border: 1px solid rgba(180, 156, 141, .5);
+    border-radius: 0 0 15px 15px;
 }
 
 .panel-block {
@@ -31,6 +31,11 @@
     padding: 10px;
     text-align: center;
     cursor: pointer;
+}
+
+.pagination-btn-prev:hover,
+.pagination-btn-next:hover {
+    background-color: white;
 }
 
 .coins-count {
@@ -72,6 +77,7 @@
 .coin_list_watch {
     width: 3%;
 }
+
 .coin-name-header,
 .coin-list_header {
     width: 20%;
@@ -81,22 +87,27 @@
 .coin-list_current-price {
     width: 11%;
 }
+
 .coin-change-price-header,
 .coin-list_percentage {
     width: 10%;
 }
+
 .coin-market-cup-header,
 .coin-list_market-cup {
     width: 12%;
 }
+
 .coin-change-market-cup-header,
 .coin-list_percentage24h {
     width: 12%;
 }
+
 .coin-total-volume-header,
 .coin-list_volume {
     width: 12%;
 }
+
 .coin-circulating-supply-header,
 .coin-list_supply {
     width: 16%;
@@ -106,6 +117,11 @@
 .one_coin_container {
     display: flex;
     flex-direction: row;
+    transition: all .5s ease;
+}
+
+.one_coin_container:hover {
+    background-color: white;
 }
 
 .coin-list_header {
