--- a/src/css/searchSuggestions.css
+++ b/src/css/searchSuggestions.css
@@ -17,7 +17,7 @@
     right: 0;
 }
 
-.autocomplete-items div {
+.autocomplete-items .suggestion {
     color: black;
     padding: 10px;
     cursor: pointer;
@@ -25,8 +25,9 @@
     border-bottom: 1px solid #d4d4d4;
 }
 
-.autocomplete-items div:hover {
-    background-color: #e9e9e9;
+.autocomplete-items .suggestion:hover,
+.autocomplete-items .suggestion:hover div {
+    background-color: #DDDDDD;
 }
 
 .autocomplete-active {
@@ -37,4 +38,27 @@
 .suggestion {
     display: flex;
     flex-direction: row;
+}
+
+
+.dark-mode .autocomplete-items {
+    background-color: var(--dm-element-color);
+    border-color: var(--dm-pink-color);
+}
+
+.dark-mode .autocomplete-items .suggestion {
+    color: var(--dm-text-main-color);
+    background-color: var(--dm-element-color);
+    border-bottom-color: var(--dm-element-hover-color);
+}
+
+.dark-mode .autocomplete-items .suggestion:hover,
+.dark-mode .autocomplete-items .suggestion:hover div {
+    background-color: var(--dm-element-hover-color);
+    color: var(--dm-pink-color);
+}
+
+.dark-mode .autocomplete-active {
+    background-color: DodgerBlue !important;
+    color: #ffffff;
 }
