--- a/src/css/calculator.css
+++ b/src/css/calculator.css
@@ -62,6 +62,11 @@
     cursor: pointer;
 }
 
+.exchange-pair:hover {
+    color: rgb(255, 139,52);
+    transition: all .5s ease;
+}
+
 .dark-mode .calc_container {
     background-color: var(--dm-element-color);
     border-color: var(--dm-element-color);
