--- a/src/css/coinList.css
+++ b/src/css/coinList.css
@@ -43,6 +43,11 @@
     padding: 10px;
     border: 1px solid rgba(180, 156, 141, .5);
     border-radius: 5px;
+    cursor: pointer;
+}
+.coins-count:hover {
+    transition: all .5s ease;
+    border-color: rgba(255, 139, 55);
 }
 
 .coins_list_container .header_container {
