--- a/src/css/oneCoin.css
+++ b/src/css/oneCoin.css
@@ -22,6 +22,13 @@
     justify-content: flex-start;
 }
 
+.onecoin_container a {
+    cursor: pointer;
+}
+
+.onecoin_container a:hover {
+    color: #B59988;
+}
 
 .onecoin-row {
     display: flex;
