--- a/src/css/runningLine.css
+++ b/src/css/runningLine.css
@@ -6,8 +6,12 @@
     gap: 10px;
     align-items: center;
     justify-content: center;
-    /* border: 1px solid rgba(180, 156, 141, .5);*/
     padding: 5px;
+    cursor: pointer;
+}
+
+.trend-coin:hover {
+    color: #B59988;
 }
 
 .coin-column {
