fix: clear search field after choosing suggestion, add additional numbers in running line

--- a/src/css/searchSuggestions.css
+++ b/src/css/searchSuggestions.css
@@ -12,6 +12,7 @@
     border-bottom: none;
     border-top: none;
     z-index: 99;
+    margin-top: 30px;
     top: 100%;
     left: 0;
     right: 0;
