--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -258,6 +258,11 @@ h1 {
     height: 16px;
 }
 
+.coin_list_watch_img:not([data-watch]) {
+    /*display: none;*/
+    height: 0px;
+}
+
 /* portfolio ===================================*/
 .portfolio_container {
     color: rgb(51, 51, 51);
@@ -399,6 +404,7 @@ h1 {
     grid-template-rows: 1fr 1fr;
     grid-template-areas: 'list list gr'
         'list list news';
+    max-height: 60vh;
 }
 
 /* news ======================================== */
@@ -547,6 +553,7 @@ h1 {
     justify-content: flex-start;
 }
 
+.button,
 button {
     transition: all .5s ease;
     color: rgb(51, 51, 51);
@@ -562,6 +569,7 @@ button {
     border-radius: 4px;
 }
 
+.button:hover,
 button:hover {
     color: rgb(255, 139, 52);
     background-color: rgb(241, 233, 228);
@@ -887,6 +895,21 @@ body.dark-mode {
 .dark-mode .watchlist_container {
     color: var(--dm-text-color);
     background-color: var(--dm-element-color);
+}
+
+.watchlist_container {
+    background-color: rgb(241, 233, 228);
+}
+
+.watchlist_container>.one_coin_container {
+    display: flex;
+    /*column-gap: 150px;*/
+    justify-content: space-between;
+    border: 1px solid rgba(180, 156, 141, .5);
+    margin: 10px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 139, 52);
 }
 
 /* portfolio ===================================*/
